Spacing: Fix about section text spacing

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -221,6 +221,8 @@
     .carousel-item
       padding: 0% 1%
 
+  .description
+    line-height: 2em
 
 // features ====================================
 .features
